@@ -1,3 +1,4 @@
+- started work on add search functionality to team drives #83
 - change "never ran" to "starting shortly"
 - finalized speed optimations for STRM creation
 - updates to caching for STRM creation optimizations
